@@ -2715,6 +2715,13 @@ in the future, but they will follow the patterns given above.
 @item .mt-attrs
 Contains versioned attributes of files, associated with the files'
 pathnames.
+@item .mt-ignore
+Contains a list of patterns, one per line. If it exists, any file with a name
+matching one of these patterns is ignored.
+@item MT/wanted-testresults
+Contains a list of testresult key names, one per line. If it exists, update
+will only select revisions that do not have regressions according to the given
+testresult keys.
 @item MT/revision
 Contains the identity of the ``base'' revision of the working copy.
 Each working copy has a base revision. When the working copy is
